fixed line spacing

--- a/static/style.css
+++ b/static/style.css
@@ -29,5 +29,5 @@ code.python {
 	margin-left: 15px;
 	margin-bottom: -30px;
 	color: #c4c4c4;
-	margin-top: 20px;
+	margin-top: 19px;
 }
